Updated Handlebars & added Routes folder

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,50 +1,2 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Food/Drink</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sports</a>
-      </li>
-            <li class="nav-item">
-        <a class="nav-link" href="#">Virtual</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Entertainment</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Outdoor Recreation </a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class="jumbotron">
-  <div class=""><img src="" alt="">
- <h2>Stepping Out!</h2>
-    <div class="mt-4">
-    <form class="create-form">
-      <div class="form-group">
-        <div class="input-group mb-3">
-          <input type="text" id="br" name="" class="form-control" placeholder=""
-            aria-label="" aria-describedby="button-addon2">
-        </div>
-      </div>
-    </form>
-  </div>    
-  </div>
-</div>
-<div class="container-fluid">
-      <h2 class="list-title">About the Team:</h2>
-    </div>
-    <div class="about my-2 my-sm-0 ml-sm-2">
-      <h2 class="list-title ">Maybe Put Something Here lol:</h2>
-    </div>
-  </div>
+{{>home/jumbo}}
+
