--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,18 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="/assets/css/stepping_out.css" type="text/css" />
-		<title>Stepping Out</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/stepping_out.js"></script>
-		<link rel="icon" href="/assets/images/stepping_out_favicon.jpg" type="image" sizes="16x16">
-    	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="/assets/css/stepping_out.css" type="text/css" />
+	<title>Stepping Out</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/assets/js/stepping_out.js"></script>
+	<link rel="icon" href="/assets/images/stepping_out_favicon.jpg" type="image" sizes="16x16">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+	{{>components/NavBar}}
+	
+	{{{ body }}}
+</body>
+
 </html>
