[skip travis] fixing typo

--- a/views/partials/home/jumbo.handlebars
+++ b/views/partials/home/jumbo.handlebars
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <div class=""><img src="" alt="">
         <h2>Stepping Out!</h2>
-        <h5>Please contribute by recommending COVID-friendly date spoits in your area, below:</h5>
+        <h5>Please contribute by recommending COVID-friendly date spots in your area, below:</h5>
         <div class="mt-4">
             <form id="cms">
                 <div class="form-group">
