--- a/views/partials/home/jumbo.handlebars
+++ b/views/partials/home/jumbo.handlebars
@@ -94,7 +94,7 @@
                         </select>
                     </div>
                     <br />
-                    <button type="submit" class="btn btn-success submit btn-lg">Submit</button>
+                    <button type="submit" id="submit_button" class="btn btn-success submit btn-lg">Submit</button>
                 </div>
             </form>
         </div>
