ok this formdiable thing may just work out. discuss with group

--- a/views/partials/home/jumbo.handlebars
+++ b/views/partials/home/jumbo.handlebars
@@ -100,3 +100,8 @@
         </div>
     </div>
 </div>
+
+<form action="/" method="POST" enctype="multipart/form-data">
+<input type="file" name="upload" multiple/>
+<input type="submit" value="Upload"/>
+</form>
