updating css using linear gradient

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
 	<script src="/assets/js/stepping_out.js"></script>
 	<link rel="icon" href="/assets/images/stepping_out_favicon.jpg" type="image" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="/styles/style.css" rel="stylesheet" />
 </head>
 
 <body>
