--- a/views/partials/home/jumbo.handlebars
+++ b/views/partials/home/jumbo.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron jumbo-bg"></div>
     <div class=""><img src="" alt="">
         <h2>Stepping Out!</h2>
         <h5>Please contribute by recommending COVID-friendly date spots in your area, below:</h5>
