--- a/views/virtual.handlebars
+++ b/views/virtual.handlebars
@@ -1,3 +1,3 @@
-<h1>Food & Drink</h1>
+<h1>Virtual</h1>
 <div class="jumbotron"></div>
   <div class="steppingOutImage"><img src="/assets/images/stepping_out.jpg" alt="Stepping Out">
