--- a/views/partials/components/NavBar.handlebars
+++ b/views/partials/components/NavBar.handlebars
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,21 +7,20 @@
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
+             <li class="nav-item">
                 <a class="nav-link" href="/foodrink">Food/Drink</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sports</a>
+                <a class="nav-link" href="/sports">Sports</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Virtual</a>
+                <a class="nav-link" href="/virtual">Virtual</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Entertainment</a>
+                <a class="nav-link" href="/entertainment">Entertainment</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Outdoor Recreation </a>
+                <a class="nav-link" href="/outdoorrecreation">Outdoor Recreation </a>
             </li>
         </ul>
     </div>
