--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,16 @@
-.jumbo-bg {
-    background: linear-gradient(180deg, rgba(0,33,36,1) 0%, rgba(121,118,9,1) 0%, rgba(0,212,255,1) 100%);
+body { 
+    padding-bottom: 100px;
 }
+
+.jumbo-bg {
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%, rgba(121,118,9,1) 0%);	    background: linear-gradient(180deg, rgba(14,0,255,1) 0%, rgba(109,230,255,1) 0%, rgba(255,255,255,1) 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}	
+
+.logo {
+    width: 300px;	    
+    height: 300px;	   
+} 	
+
