updating jumbotro class in main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,14 +8,14 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="/assets/css/stepping_out.css" type="text/css" />
 	<title>Stepping Out</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="/assets/js/stepping_out.js"></script>
 	<link rel="icon" href="/assets/images/stepping_out_favicon.jpg" type="image" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="/styles/style.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="jumbo-bg"></body>
 
 	{{>components/NavBar}}
 	
