--- a/views/layouts/outdoor.handlebars
+++ b/views/layouts/outdoor.handlebars
@@ -2,3 +2,12 @@
     <h1 class="display-4 category-title">Take a hike ... Or a bike</h1>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
+
+        {{>components/InputState}}
+    </div>
+    <div class="row page-row">
+        <div class="col-sm-6">
+            <div class="card card-bg">
+                <img class="category-img" src="/images/category.png" alt="Category" />
+
+                
