further building out category pages

--- a/views/sports.handlebars
+++ b/views/sports.handlebars
@@ -68,4 +68,7 @@
             </div>
         </div>
     </div>
-</div> 
+<footer class="footer">
+        <h4>Submit your ideas here!</h4>
+    </footer>
+</div>     
