--- a/views/virtual.handlebars
+++ b/views/virtual.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="display-4 outdoors-title">Take a hike ... Or a bike</h1>
+    <h1 class="display-4 virtual-title">More than 6 feet</h1>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/InputState}}
@@ -71,4 +71,4 @@
     <footer class="footer">
         <h4>Submit your ideas here!</h4>
     </footer>
-</div> 
+</div>
