--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -98,8 +98,8 @@ body {
 }
 
 .category-img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -119,4 +119,14 @@ body {
     padding: 10px;
     border-radius: 10px;
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 0%, rgba(116,116,116,1) 100%);
+    transition: 0.5s;
 }
+
+.card-bg:hover {
+    box-shadow: 20px 20px 20px black;;
+}
+
+.icon {
+    margin: 0 auto;
+}	
+
