adding entertainment icons

--- a/views/entertainment.handlebars
+++ b/views/entertainment.handlebars
@@ -7,7 +7,11 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
+                </svg>
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -22,7 +26,11 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
+                </svg>
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -39,7 +47,11 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
+                </svg>
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -54,7 +66,11 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
+                </svg>
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
