adding icons for virtual and sports

--- a/views/virtual.handlebars
+++ b/views/virtual.handlebars
@@ -7,7 +7,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <img class="category-img" src="/images/distance.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -22,7 +22,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <img class="category-img" src="/images/distance.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -39,7 +39,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <img class="category-img" src="/images/distance.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -54,7 +54,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/category.png" alt="Category" />
+                <img class="category-img" src="/images/distance.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
