--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
         Domo | Caroline | Esiena | Alex
       </h3>
       <footer class="footer">
-        <h4>Submit your ideas here!</h4>
+        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
       </footer>
     </div>
   </div>
