making footer link clickable

--- a/views/outdoors.handlebars
+++ b/views/outdoors.handlebars
@@ -77,6 +77,6 @@
         </div>
     </div>
     <footer class="footer">
-        <h4>Submit your ideas here!</h4>
+        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
     </footer>
 </div> 
