updating IDs + inputstate

--- a/views/partials/home/jumbo.handlebars
+++ b/views/partials/home/jumbo.handlebars
@@ -16,9 +16,9 @@
                         <select class="custom-select" id="activity_category">
                             <option value="Personal">Food & Drink</option>
                             <option value="Product Review">Sports</option>
-                            <option value="Political">Virtual</option>
-                            <option value="Political">Entertainment</option>
-                            <option value="Political">Outdoors & Recreation</option>
+                            <option value="Virtual">Virtual</option>
+                            <option value="Entertainment">Entertainment</option>
+                            <option value="Outdoors & Recreation">Outdoors & Recreation</option>
                         </select>
                     </div>
                     <br />
