--- a/views/outdoors.handlebars
+++ b/views/outdoors.handlebars
@@ -2,7 +2,7 @@
     <h1 class="display-4 outdoors-title">Take a hike ... Or a bike</h1>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
-        {{>components/InputState}}
+        {{>components/inputstate}}
     </div>
     <div class="row page-row">
         <div class="col-sm-6">
