--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,10 @@
 	<title>Stepping Out</title>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="/assets/js/stepping_out.js"></script>
+	<script src="/assets/js/listener.js"></script>
 	<link rel="icon" href="/assets/images/stepping_out_favicon.jpg" type="image" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link href="/styles/style.css" rel="stylesheet" />
+	<link href="/assets/styles/style.css" rel="stylesheet" />
 </head>
 
 <body class="jumbo-bg"></body>
