--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <h2 class="text-center">Submit your date ideas!</h2>
     <div class="submission-form-container">
-        <form>
+        <form id="submitPostForm">
             <div class="form-group">
                 <label for="inputName">Name</label>
                 <input type="text" class="form-control" id="author_name" placeholder="enter your name">
@@ -21,16 +21,16 @@
             <div class="form-group">
                 <label for="category">Select Category:</label>
                 <select class="custom-select" id="activity_category">
-                    <option value="Personal">Food & Drink</option>
-                    <option value="Product Review">Sports</option>
+                    <option value="Food_Drink">Food & Drink</option>
+                    <option value="Sports">Sports</option>
                     <option value="Virtual">Virtual</option>
                     <option value="Entertainment">Entertainment</option>
-                    <option value="Outdoors & Recreation">Outdoors & Recreation</option>
+                    <option value="Outdoors_Recreation">Outdoors & Recreation</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="inputDateName">Date name</label>
-                <input type="text" class="form-control" id="state" placeholder="Enter date name">
+                <input type="text" class="form-control" id="activity_name" placeholder="Enter date name">
             </div>
             <div class="form-group">
                 <label for="inputDateDescription">Date description</label>
@@ -53,7 +53,7 @@
                 <label for="inputInsider">Stepping Out insider info</label>
                 <input type="text" class="form-control" id="inputInsider" placeholder="Enter insider info">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" id="submit_button" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
