--- a/views/outdoors.handlebars
+++ b/views/outdoors.handlebars
@@ -1,15 +1,14 @@
 <div class="container">
-    <h1 class="display-4 outdoors-title">Take a hike ... Or a bike</h1>
+    <h1 class="display-4 outdoors-title">Take a hike ... Or a bike!</h1>
+     <hr></hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
     </div>
-    <div class="row page-row">
+   <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-tree-fill" viewBox="0 0 16 16">
-                    <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5z"/>
-                </svg>
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -24,9 +23,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-tree-fill" viewBox="0 0 16 16">
-                    <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5z"/>
-                </svg>
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -43,9 +40,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-tree-fill" viewBox="0 0 16 16">
-                    <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5z"/>
-                </svg>
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -60,9 +55,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor" class="bi bi-tree-fill" viewBox="0 0 16 16">
-                    <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5z"/>
-                </svg>
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -76,7 +69,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
-    </footer>
+   <footer class="footer">
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+      </footer>
 </div> 
