--- a/views/FoodDrink.handlebars
+++ b/views/FoodDrink.handlebars
@@ -1,5 +1,6 @@
 <div class="container">
-    <h1 class="display-4 dining-title">Food, Dining ... and Breathing</h1>
+    <h1 class="display-4 dining-title">Fine Dining!</h1>
+    <hr></hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
@@ -69,6 +70,6 @@
         </div>
     </div>
     <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
-    </footer>
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+      </footer>
 </div> 
