--- a/views/entertainment.handlebars
+++ b/views/entertainment.handlebars
@@ -1,17 +1,14 @@
 <div class="container">
     <h1 class="display-4 entertainment-title">So you want to find some entertainment?</h1>
+     <hr></hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
     </div>
-    <div class="row page-row">
+   <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
-                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
-                </svg>
+                <img class="category-img" src="/images/entertainment.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -26,11 +23,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
-                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
-                </svg>
+                <img class="category-img" src="/images/entertainment.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -47,11 +40,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
-                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
-                </svg>
+                <img class="category-img" src="/images/entertainment.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -66,11 +55,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
-                    <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                    <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
-                </svg>
+                <img class="category-img" src="/images/entertainment.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -85,6 +70,6 @@
         </div>
     </div>
     <footer class="footer">
-       <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
-    </footer>
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+      </footer>
 </div> 
