--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,20 @@
 <div class="container">
   <div class="text-center">
+    <br></br>
     <h1 class="display-4">STEPPING OUT</h1>
     <img class="sun-img" src="/images/sun.png" alt="sun" />
-    <p class="lead app-instructions">Description of application / directions to use application</p>
-    <div class="home-separator-first">
-      <hr class="home-hr" />
-    </div>
-    <div class="home-separator-second">
-      <hr class="home-hr" />
-    </div>
+    <p class="lead app-instructions">Welcome to Stepping Out! We're glad you're here. This website is designed to help cure your quarantine lonliness by providing you with safe activies for you or you and friend in your area. Click on one of the activity types at the top of the screen to see those type of activites!</p>
+   <hr></hr>
+   <br></br>
     <div class="home-about-team">
-      <h1 class="display-5 mb-5">
+      <h2>
         About the Team:
-      </h1>
+      </h2>
       <h3>
         Domo | Caroline | Esiena | Alex
       </h3>
       <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
       </footer>
     </div>
   </div>
