--- a/views/virtual.handlebars
+++ b/views/virtual.handlebars
@@ -1,5 +1,6 @@
 <div class="container">
     <h1 class="display-4 virtual-title">More than 6 feet</h1>
+     <hr></hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
@@ -68,8 +69,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: white">Submit your ideas here!</a></h4>
-    </footer>
+   <footer class="footer">
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+      </footer>
 </div>
 
