--- a/views/sports.handlebars
+++ b/views/sports.handlebars
@@ -8,7 +8,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/sports.png" alt="Category" />
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -23,7 +23,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/sports.png" alt="Category" />
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -40,7 +40,7 @@
     <div class="row page-row">
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/sports.png" alt="Category" />
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-sm-6">
             <div class="card card-bg">
-                <img class="category-img" src="/images/sports.png" alt="Category" />
+                <img class="category-img" src="/images/hike.png" alt="Category" />
                 <div class="card-body">
                     <h5 class="card-title">Category name</h5>
                     <p class="card-text">Activity name</p>
