--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label for="inputPhotos">Photos</label>
-                <input type="file" class="form-control-file" id="inputPhotos">
+                <input type="file" class="form-control-file" id="input_photos">
             </div>
             <div class="form-group">
                 <label for="inputRating">Rating</label>
@@ -51,7 +51,7 @@
             </div>
             <div class="form-group">
                 <label for="inputInsider">Stepping Out insider info</label>
-                <input type="text" class="form-control" id="inputInsider" placeholder="Enter insider info">
+                <input type="text" class="form-control" id="input_insider" placeholder="Enter insider info">
             </div>
             <button type="submit" id="submit_button" class="btn btn-primary">Submit</button>
         </form>
