--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -1,4 +1,6 @@
+
 <div class="container">
+    <script src="/assets/js/listener.js"></script>
     <h2 class="text-center">Submit your date ideas!</h2>
     <div class="submission-form-container">
         <form id="submitPostForm">
