--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -2,8 +2,18 @@
     <h2 class="text-center">Submit your date ideas!</h2>
     <div class="submission-form-container">
         <form id="submitPostForm">
+            <div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+  </div>
+  <div class="custom-file">
+    <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+  </div>
+</div>
             <div class="form-group">
                 <label for="inputName">Name</label>
+                
                 <input type="text" class="form-control" id="author_name" placeholder="enter your name">
             </div>
             <div class="form-group">
