removing broken js reference

--- a/views/partials/components/posts.handlebars
+++ b/views/partials/components/posts.handlebars
@@ -11,7 +11,7 @@
                         <p class="card-text">{{activity_description}}</p>
                         <p class="card-text">{{rating}}</p>
                         <p class="card-text">{{cost}}</p>
-                        <p class="card-text">{{inputInsider}}</p>
+                        <p class="card-text">{{input_insider}}</p>
                         <button class="btn btn-primary">Show photos</button>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                         <p class="card-text">{{activity_description}}</p>
                         <p class="card-text">{{rating}}</p>
                         <p class="card-text">{{cost}}</p>
-                        <p class="card-text">{{inputInsider}}</p>
+                        <p class="card-text">{{input_insider}}</p>
                         <button class="btn btn-primary">Show photos</button>
                     </div>
                 </div>
