added text next to each input line so user knows, ex is activity name then list the activity

--- a/views/partials/components/posts.handlebars
+++ b/views/partials/components/posts.handlebars
@@ -5,13 +5,13 @@
                 <div class="card card-bg">
                     <img class="category-img" src="/images/food.png" alt="Category" />
                     <div class="card-body">
-                        <h5 class="card-title">{{activity_category}}</h5>
-                        <p class="card-text">{{activity_name}}</p>
-                        <p class="card-text">{{state_code}}, {{city}}</p>
-                        <p class="card-text">{{activity_description}}</p>
-                        <p class="card-text">{{rating}}</p>
-                        <p class="card-text">{{cost}}</p>
-                        <p class="card-text">{{inputInsider}}</p>
+                        <h5 class="card-title"> Category: {{activity_category}}</h5>
+                        <p class="card-text"> Date: {{activity_name}}</p>
+                        <p class="card-text"> Location: {{state_code}}, {{city}}</p>
+                        <p class="card-text"> Description: {{activity_description}}</p>
+                        <p class="card-text"> Rating: {{rating}}</p>
+                        <p class="card-text"> Price: {{cost}}</p>
+                        <p class="card-text"> Inside Scoop: {{inputInsider}}</p>
                         <button class="btn btn-primary">Show photos</button>
                     </div>
                 </div>
