changed order of location so city comes before state

--- a/views/partials/components/posts.handlebars
+++ b/views/partials/components/posts.handlebars
@@ -23,7 +23,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{activity_category}}</h5>
                         <p class="card-text">{{activity_name}}</p>
-                        <p class="card-text">{{state_code}}, {{city}}</p>
+                        <p class="card-text">{{city}}, {{state_code}}</p>
                         <p class="card-text">{{activity_description}}</p>
                         <p class="card-text">{{rating}}</p>
                         <p class="card-text">{{cost}}</p>
