all GET routes live

--- a/views/FoodDrink.handlebars
+++ b/views/FoodDrink.handlebars
@@ -1,12 +1,14 @@
 <div class="container">
     <h1 class="display-4 dining-title">Fine Dining!</h1>
-    <hr></hr>
+    <hr>
+    </hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
     </div>
     {{>components/posts}}
     <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas
+                here!</a></h4>
     </footer>
-</div> 
+</div>
