--- a/views/virtual.handlebars
+++ b/views/virtual.handlebars
@@ -1,76 +1,14 @@
 <div class="container">
-    <h1 class="display-4 virtual-title">More than 6 feet</h1>
-     <hr></hr>
+    <h1 class="display-4 dining-title">More than 6 feet </h1>
+    <hr>
+    </hr>
     <div class="submission-form-container state-filter">
         <h4>Filter by state:</h4>
         {{>components/inputstate}}
     </div>
-    <div class="row page-row">
-        <div class="col-sm-6">
-            <div class="card card-bg">
-                <img class="category-img" src="/images/distance.png" alt="Category" />
-                <div class="card-body">
-                    <h5 class="card-title">Category name</h5>
-                    <p class="card-text">Activity name</p>
-                    <p class="card-text">State, City</p>
-                    <p class="card-text">Long description</p>
-                    <p class="card-text">Rating</p>
-                    <p class="card-text">Cost</p>
-                    <p class="card-text">Insider info</p>
-                    <button class="btn btn-primary">Show photos</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card card-bg">
-                <img class="category-img" src="/images/distance.png" alt="Category" />
-                <div class="card-body">
-                    <h5 class="card-title">Category name</h5>
-                    <p class="card-text">Activity name</p>
-                    <p class="card-text">State, City</p>
-                    <p class="card-text">Long description</p>
-                    <p class="card-text">Rating</p>
-                    <p class="card-text">Cost</p>
-                    <p class="card-text">Insider info</p>
-                    <button class="btn btn-primary">Show photos</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row page-row">
-        <div class="col-sm-6">
-            <div class="card card-bg">
-                <img class="category-img" src="/images/distance.png" alt="Category" />
-                <div class="card-body">
-                    <h5 class="card-title">Category name</h5>
-                    <p class="card-text">Activity name</p>
-                    <p class="card-text">State, City</p>
-                    <p class="card-text">Long description</p>
-                    <p class="card-text">Rating</p>
-                    <p class="card-text">Cost</p>
-                    <p class="card-text">Insider info</p>
-                    <button class="btn btn-primary">Show photos</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card card-bg">
-                <img class="category-img" src="/images/distance.png" alt="Category" />
-                <div class="card-body">
-                    <h5 class="card-title">Category name</h5>
-                    <p class="card-text">Activity name</p>
-                    <p class="card-text">State, City</p>
-                    <p class="card-text">Long description</p>
-                    <p class="card-text">Rating</p>
-                    <p class="card-text">Cost</p>
-                    <p class="card-text">Insider info</p>
-                    <button class="btn btn-primary">Show photos</button>
-                </div>
-            </div>
-        </div>
-    </div>
-   <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
-      </footer>
+    {{>components/posts}}
+    <footer class="footer">
+        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas
+                here!</a></h4>
+    </footer>
 </div>
-
